# script_access

./: .gitignore  main.py  pyproject.toml
datafiles/: README.md
incolumepy/incolume_cli/: __init__.py  cli.py
incolumepy/incolume_cli/argparse/: __init__.py  abbrrev.py  fromfile.py  myls.py
incolumepy/incolume_cli/click/: __init__.py  assemblyai.py  mine.py  sof.py  zetcode.py
incolumepy/incolume_cli/icecream/: __init__.py
incolumepy/others/: xpto.py
