[tool.poetry]
name = "incolumepy.incolume_cli"
version = "0.1.0"
description = "Command Line Interface"
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolumepy", from=""},
]
[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
ipython = "^8.4.0"
click = "^8.1.3"
icecream = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"