[tool.poetry]
name = "incolumepy.incolume_cli"
version = "0.1.2-alpha.0"
description = "Command Line Interface"
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolumepy", from=""},
]

[tool.poetry.scripts]
incolumecl = 'incolumepy.incolume_cli.cli:run'
zout = 'incolumepy.incolume_cli.click.zetcode:output'
zhello = 'incolumepy.incolume_cli.click.zetcode:hello'
zcolor = 'incolumepy.incolume_cli.click.zetcode:coloured'
zflag0 = 'incolumepy.incolume_cli.click.zetcode:flag'

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
ipython = "^8.4.0"
click = "^8.1.3"
icecream = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"